<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.chrisrudd812</groupId>
    <artifactId>Clockify</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>Clockify Web Application - Stripe Integration</name>
    <description>TimeClock Application with Stripe Payments</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <failOnMissingWebXml>false</failOnMissingWebXml>

        <jakartaee.platform.version>10.0.0</jakartaee.platform.version>
        <jstl.version>3.0.1</jstl.version>
        <stripe.java.version>25.0.0</stripe.java.version> <mysql.connector.version>8.0.33</mysql.connector.version>
        <jbcrypt.version>0.4</jbcrypt.version>
        <org.json.version>20240303</org.json.version>
        <log4j.version>2.20.0</log4j.version>
        <slf4j.version>2.0.12</slf4j.version>
        <jackson.version>2.16.1</jackson.version>
        <poi.version>5.2.5</poi.version>
        <hikaricp.version>5.1.0</hikaricp.version>
        <commons.codec.version>1.16.1</commons.codec.version>
        <commons.collections4.version>4.4</commons.collections4.version>
        <commons.compress.version>1.26.0</commons.compress.version>
        <commons.io.version>2.15.1</commons.io.version>
        <commons.lang3.version>3.14.0</commons.lang3.version>
        <commons.text.version>1.11.0</commons.text.version>
        <commons.logging.version>1.3.0</commons.logging.version>
        <commons.math3.version>3.6.1</commons.math3.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${jakartaee.platform.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
            <version>${jstl.version}</version>
        </dependency>

        <dependency>
            <groupId>com.stripe</groupId>
            <artifactId>stripe-java</artifactId>
            <version>${stripe.java.version}</version>
        </dependency>

        <dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId><version>${mysql.connector.version}</version></dependency>
        <dependency><groupId>org.mindrot</groupId><artifactId>jbcrypt</artifactId><version>${jbcrypt.version}</version></dependency>
        <dependency><groupId>org.json</groupId><artifactId>json</artifactId><version>${org.json.version}</version></dependency>
        <dependency><groupId>com.fasterxml.jackson.core</groupId><artifactId>jackson-databind</artifactId><version>${jackson.version}</version></dependency>
        <dependency><groupId>commons-codec</groupId><artifactId>commons-codec</artifactId><version>${commons.codec.version}</version></dependency>
        <dependency><groupId>org.apache.commons</groupId><artifactId>commons-collections4</artifactId><version>${commons.collections4.version}</version></dependency>
        <dependency><groupId>org.apache.commons</groupId><artifactId>commons-compress</artifactId><version>${commons.compress.version}</version></dependency>
        <dependency><groupId>commons-io</groupId><artifactId>commons-io</artifactId><version>${commons.io.version}</version></dependency>
        <dependency><groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>${commons.lang3.version}</version></dependency>
        <dependency><groupId>org.apache.commons</groupId><artifactId>commons-text</artifactId><version>${commons.text.version}</version></dependency>
        <dependency><groupId>commons-logging</groupId><artifactId>commons-logging</artifactId><version>${commons.logging.version}</version></dependency>
        <dependency><groupId>org.apache.commons</groupId><artifactId>commons-math3</artifactId><version>${commons.math3.version}</version></dependency>
        <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${slf4j.version}</version></dependency>
        <dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-slf4j2-impl</artifactId><version>${log4j.version}</version><scope>runtime</scope></dependency>
        <dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-api</artifactId><version>${log4j.version}</version></dependency>
        <dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-core</artifactId><version>${log4j.version}</version><scope>runtime</scope></dependency>
        <dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-web</artifactId><version>${log4j.version}</version><scope>runtime</scope></dependency>
        <dependency><groupId>org.apache.poi</groupId><artifactId>poi</artifactId><version>${poi.version}</version></dependency>
        <dependency><groupId>org.apache.poi</groupId><artifactId>poi-ooxml</artifactId><version>${poi.version}</version></dependency>
        <dependency><groupId>com.zaxxer</groupId><artifactId>HikariCP</artifactId><version>${hikaricp.version}</version></dependency>
        <dependency><groupId>com.zaxxer</groupId><artifactId>SparseBitSet</artifactId><version>1.3</version></dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
        </plugins>
    </build>
</project>